src/test/deca/codegen/valid/decla_Init.deca
// Description:
//    declaration avec initialisation
//
// Resultats:
//  2
//
// Historique:
//    cree le 13/01/2017
{
int x = 2 ;
print(x);
}
