src/test/deca/codegen/invalid/NoInitDivNoInit_f.deca
// Description:
//    division sans initialisation
//
// Resultats:
//  Erreur
//
// Historique:
//    cree le 22/01/2017
{
float x;
float y;
print(x / y);
}
